exercise-09/.deploy/k8s/manifests/statefulset-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:14
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        - name: pg-hba-config
          mountPath: /etc/postgresql/pg_hba.conf
          subPath: pg_hba.conf
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - worker
            - -d
            - app
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
              - psql
              - -U
              - worker
              - -d
              - app
              - -c
              - "SELECT 1;"
          initialDelaySeconds: 15
          periodSeconds: 5
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: pvc-example
      - name: pg-hba-config
        configMap:
          name: postgres-config
